check_output.txt
   Compiling pixelflow-nnue v0.1.0 (/app/pixelflow-nnue)
   Compiling core-term v0.1.0 (/app/core-term)
    Checking rustc-demangle v0.1.26
    Checking hashbrown v0.16.1
   Compiling pixelflow-search v0.1.0 (/app/pixelflow-search)
    Checking stable_deref_trait v1.2.1
    Checking arrayvec v0.7.6
error[E0277]: `T` cannot be shared between threads safely
   --> pixelflow-search/src/egraph/algebra.rs:111:34
    |
111 | impl<T: InversePair> Rewrite for Canonicalize<T> {
    |                                  ^^^^^^^^^^^^^^^ `T` cannot be shared between threads safely
    |
note: required because it appears within the type `PhantomData<T>`
   --> /rustc/ded5c06cf21d2b93bffd5d884aa6e96934ee4234/library/core/src/marker.rs:822:12
note: required because it appears within the type `Canonicalize<T>`
   --> pixelflow-search/src/egraph/algebra.rs:103:12
    |
103 | pub struct Canonicalize<T: InversePair>(PhantomData<T>);
    |            ^^^^^^^^^^^^
note: required by a bound in `Rewrite`
   --> pixelflow-search/src/egraph/rewrite.rs:47:27
    |
 47 | pub trait Rewrite: Send + Sync {
    |                           ^^^^ required by this bound in `Rewrite`
help: consider further restricting type parameter `T` with trait `Sync`
    |
111 | impl<T: InversePair + std::marker::Sync> Rewrite for Canonicalize<T> {
    |                     +++++++++++++++++++

error[E0277]: `T` cannot be sent between threads safely
   --> pixelflow-search/src/egraph/algebra.rs:111:34
    |
111 | impl<T: InversePair> Rewrite for Canonicalize<T> {
    |                                  ^^^^^^^^^^^^^^^ `T` cannot be sent between threads safely
    |
note: required because it appears within the type `PhantomData<T>`
   --> /rustc/ded5c06cf21d2b93bffd5d884aa6e96934ee4234/library/core/src/marker.rs:822:12
note: required because it appears within the type `Canonicalize<T>`
   --> pixelflow-search/src/egraph/algebra.rs:103:12
    |
103 | pub struct Canonicalize<T: InversePair>(PhantomData<T>);
    |            ^^^^^^^^^^^^
note: required by a bound in `Rewrite`
   --> pixelflow-search/src/egraph/rewrite.rs:47:20
    |
 47 | pub trait Rewrite: Send + Sync {
    |                    ^^^^ required by this bound in `Rewrite`
help: consider further restricting type parameter `T` with trait `Send`
    |
111 | impl<T: InversePair + std::marker::Send> Rewrite for Canonicalize<T> {
    |                     +++++++++++++++++++

error[E0277]: `T` cannot be shared between threads safely
   --> pixelflow-search/src/egraph/algebra.rs:144:34
    |
144 | impl<T: InversePair> Rewrite for Involution<T> {
    |                                  ^^^^^^^^^^^^^ `T` cannot be shared between threads safely
    |
note: required because it appears within the type `PhantomData<T>`
   --> /rustc/ded5c06cf21d2b93bffd5d884aa6e96934ee4234/library/core/src/marker.rs:822:12
note: required because it appears within the type `Involution<T>`
   --> pixelflow-search/src/egraph/algebra.rs:136:12
    |
136 | pub struct Involution<T: InversePair>(PhantomData<T>);
    |            ^^^^^^^^^^
note: required by a bound in `Rewrite`
   --> pixelflow-search/src/egraph/rewrite.rs:47:27
    |
 47 | pub trait Rewrite: Send + Sync {
    |                           ^^^^ required by this bound in `Rewrite`
help: consider further restricting type parameter `T` with trait `Sync`
    |
144 | impl<T: InversePair + std::marker::Sync> Rewrite for Involution<T> {
    |                     +++++++++++++++++++

error[E0277]: `T` cannot be sent between threads safely
   --> pixelflow-search/src/egraph/algebra.rs:144:34
    |
144 | impl<T: InversePair> Rewrite for Involution<T> {
    |                                  ^^^^^^^^^^^^^ `T` cannot be sent between threads safely
    |
note: required because it appears within the type `PhantomData<T>`
   --> /rustc/ded5c06cf21d2b93bffd5d884aa6e96934ee4234/library/core/src/marker.rs:822:12
note: required because it appears within the type `Involution<T>`
   --> pixelflow-search/src/egraph/algebra.rs:136:12
    |
136 | pub struct Involution<T: InversePair>(PhantomData<T>);
    |            ^^^^^^^^^^
note: required by a bound in `Rewrite`
   --> pixelflow-search/src/egraph/rewrite.rs:47:20
    |
 47 | pub trait Rewrite: Send + Sync {
    |                    ^^^^ required by this bound in `Rewrite`
help: consider further restricting type parameter `T` with trait `Send`
    |
144 | impl<T: InversePair + std::marker::Send> Rewrite for Involution<T> {
    |                     +++++++++++++++++++

error[E0277]: `T` cannot be shared between threads safely
   --> pixelflow-search/src/egraph/algebra.rs:185:34
    |
185 | impl<T: InversePair> Rewrite for Cancellation<T> {
    |                                  ^^^^^^^^^^^^^^^ `T` cannot be shared between threads safely
    |
note: required because it appears within the type `PhantomData<T>`
   --> /rustc/ded5c06cf21d2b93bffd5d884aa6e96934ee4234/library/core/src/marker.rs:822:12
note: required because it appears within the type `Cancellation<T>`
   --> pixelflow-search/src/egraph/algebra.rs:177:12
    |
177 | pub struct Cancellation<T: InversePair>(PhantomData<T>);
    |            ^^^^^^^^^^^^
note: required by a bound in `Rewrite`
   --> pixelflow-search/src/egraph/rewrite.rs:47:27
    |
 47 | pub trait Rewrite: Send + Sync {
    |                           ^^^^ required by this bound in `Rewrite`
help: consider further restricting type parameter `T` with trait `Sync`
    |
185 | impl<T: InversePair + std::marker::Sync> Rewrite for Cancellation<T> {
    |                     +++++++++++++++++++

error[E0277]: `T` cannot be sent between threads safely
   --> pixelflow-search/src/egraph/algebra.rs:185:34
    |
185 | impl<T: InversePair> Rewrite for Cancellation<T> {
    |                                  ^^^^^^^^^^^^^^^ `T` cannot be sent between threads safely
    |
note: required because it appears within the type `PhantomData<T>`
   --> /rustc/ded5c06cf21d2b93bffd5d884aa6e96934ee4234/library/core/src/marker.rs:822:12
note: required because it appears within the type `Cancellation<T>`
   --> pixelflow-search/src/egraph/algebra.rs:177:12
    |
177 | pub struct Cancellation<T: InversePair>(PhantomData<T>);
    |            ^^^^^^^^^^^^
note: required by a bound in `Rewrite`
   --> pixelflow-search/src/egraph/rewrite.rs:47:20
    |
 47 | pub trait Rewrite: Send + Sync {
    |                    ^^^^ required by this bound in `Rewrite`
help: consider further restricting type parameter `T` with trait `Send`
    |
185 | impl<T: InversePair + std::marker::Send> Rewrite for Cancellation<T> {
    |                     +++++++++++++++++++

error[E0277]: `T` cannot be shared between threads safely
   --> pixelflow-search/src/egraph/algebra.rs:227:34
    |
227 | impl<T: InversePair> Rewrite for InverseAnnihilation<T> {
    |                                  ^^^^^^^^^^^^^^^^^^^^^^ `T` cannot be shared between threads safely
    |
note: required because it appears within the type `PhantomData<T>`
   --> /rustc/ded5c06cf21d2b93bffd5d884aa6e96934ee4234/library/core/src/marker.rs:822:12
note: required because it appears within the type `InverseAnnihilation<T>`
   --> pixelflow-search/src/egraph/algebra.rs:219:12
    |
219 | pub struct InverseAnnihilation<T: InversePair>(PhantomData<T>);
    |            ^^^^^^^^^^^^^^^^^^^
note: required by a bound in `Rewrite`
   --> pixelflow-search/src/egraph/rewrite.rs:47:27
    |
 47 | pub trait Rewrite: Send + Sync {
    |                           ^^^^ required by this bound in `Rewrite`
help: consider further restricting type parameter `T` with trait `Sync`
    |
227 | impl<T: InversePair + std::marker::Sync> Rewrite for InverseAnnihilation<T> {
    |                     +++++++++++++++++++

error[E0277]: `T` cannot be sent between threads safely
   --> pixelflow-search/src/egraph/algebra.rs:227:34
    |
227 | impl<T: InversePair> Rewrite for InverseAnnihilation<T> {
    |                                  ^^^^^^^^^^^^^^^^^^^^^^ `T` cannot be sent between threads safely
    |
note: required because it appears within the type `PhantomData<T>`
   --> /rustc/ded5c06cf21d2b93bffd5d884aa6e96934ee4234/library/core/src/marker.rs:822:12
note: required because it appears within the type `InverseAnnihilation<T>`
   --> pixelflow-search/src/egraph/algebra.rs:219:12
    |
219 | pub struct InverseAnnihilation<T: InversePair>(PhantomData<T>);
    |            ^^^^^^^^^^^^^^^^^^^
note: required by a bound in `Rewrite`
   --> pixelflow-search/src/egraph/rewrite.rs:47:20
    |
 47 | pub trait Rewrite: Send + Sync {
    |                    ^^^^ required by this bound in `Rewrite`
help: consider further restricting type parameter `T` with trait `Send`
    |
227 | impl<T: InversePair + std::marker::Send> Rewrite for InverseAnnihilation<T> {
    |                     +++++++++++++++++++

    Checking scopeguard v1.2.0
    Checking rustix v1.0.7
For more information about this error, try `rustc --explain E0277`.
error: could not compile `pixelflow-search` (lib) due to 8 previous errors
warning: build failed, waiting for other jobs to finish...
error: could not compile `pixelflow-search` (lib) due to 8 previous errors
